# apiclient/src/models/mobile-log-file-dto.ts
@@ -10,8 +10,23 @@
  * NOTE: This class is auto generated by the swagger code generator program.
  * https://github.com/swagger-api/swagger-codegen.git
  * Do not edit the class manually.
- */export * from './apis/charge-api';
-export * from './apis/login-api';
-export * from './apis/mobile-log-api';
-export * from './apis/mobile-reading-api';
-
+ */
+/**
+ * Pda日志
+ * @export
+ * @interface MobileLogFileDto
+ */
+export interface MobileLogFileDto {
+    /**
+     * 日志名称
+     * @type {string}
+     * @memberof MobileLogFileDto
+     */
+    logFileName: any;
+    /**
+     * 日志文件路径
+     * @type {string}
+     * @memberof MobileLogFileDto
+     */
+    logFileUrl: any;
+}
