# apiclient/src/models/pda-cust-list-dto.ts
@@ -1,0 +1,50 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * 抄表系统 - Pda抄表
+ * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
+ *
+ * OpenAPI spec version: v1
+ * 
+ *
+ * NOTE: This class is auto generated by the swagger code generator program.
+ * https://github.com/swagger-api/swagger-codegen.git
+ * Do not edit the class manually.
+ */
+/**
+ * 快捷查询Dto
+ * @export
+ * @interface PdaCustListDto
+ */
+export interface PdaCustListDto {
+    /**
+     * 客户ID
+     * @type {number}
+     * @memberof PdaCustListDto
+     */
+    id?: any;
+    /**
+     * 客户编号
+     * @type {string}
+     * @memberof PdaCustListDto
+     */
+    custCode?: any;
+    /**
+     * 客户姓名
+     * @type {string}
+     * @memberof PdaCustListDto
+     */
+    custName?: any;
+    /**
+     * 客户地址
+     * @type {string}
+     * @memberof PdaCustListDto
+     */
+    custAddress?: any;
+    /**
+     * 册本编号
+     * @type {string}
+     * @memberof PdaCustListDto
+     */
+    bookCode?: any;
+}
