# apiclient/src/models/upload-mobile-log-file-dto.ts
@@ -10,8 +10,23 @@
  * NOTE: This class is auto generated by the swagger code generator program.
  * https://github.com/swagger-api/swagger-codegen.git
  * Do not edit the class manually.
- */export * from './apis/charge-api';
-export * from './apis/login-api';
-export * from './apis/mobile-log-api';
-export * from './apis/mobile-reading-api';
-
+ */
+/**
+ * Pda日志上传
+ * @export
+ * @interface UploadMobileLogFileDto
+ */
+export interface UploadMobileLogFileDto {
+    /**
+     * 设备号
+     * @type {string}
+     * @memberof UploadMobileLogFileDto
+     */
+    deviceCode: any;
+    /**
+     * Pda日志
+     * @type {Array&lt;MobileLogFileDto&gt;}
+     * @memberof UploadMobileLogFileDto
+     */
+    logFiles?: any;
+}
